# Multimodal-Rag

./: README.md  last_prompt.txt  pyproject.toml  queries.txt  rag_results.json  requirements.txt
app/: dashboard.py
config/: settings.py
json/: AN699chunks.json
notebooks/: raw.md
scripts/: ingest.py  ingest_colab.py  query.py
src/: embed.py
src/ingestion/: __init__.py  chunk.py  enrich.py  export.py  extract.py  pipeline.py
src/retrieval/: __init__.py  generate.py  search.py
