[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-rag"
version = "0.1.0"
description = "Multimodal RAG pipeline — PDF ingestion, vector search, and answer generation"
requires-python = ">=3.13"
dependencies = [
    "langchain",
    "langchain-chroma",
    "langchain-community",
    "langchain-google-genai",
    "langchain-huggingface",
    "langchain-openai",
    "unstructured[all-docs]",
    "python-dotenv",
    "streamlit>=1.28",
    "pandas>=2.0",
    "Pillow>=10.0",
    "plotly>=5.18",
]

[tool.setuptools.packages.find]
where = ["src", "config", "scripts"]
include = ["src.*", "config.*", "scripts.*"]
